# griddler

./: CMakeLists.txt  CnfFormula.cpp  CnfFormula.h  GriddlerPuzzle.cpp  GriddlerPuzzle.h  Line.cpp  Line.h  README.md  main.cpp
examples/: inputBarak_JokerFace.txt  inputBarak_Sundae.txt  inputButterfly.txt  inputCube.txt  inputDog.txt  inputDolphin.txt  inputFox.txt  inputLeaf.txt  inputPeople.txt
